apps/mautic/mautic-cron-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mautic-cron
spec:
  selector:
    matchLabels:
      app: mautic-cron
  replicas: 1
  template:
    metadata:
      labels:
        app: mautic-cron
    spec:
      containers:
        - name: mautic-cron
          image: mautic/mautic:7.2.1-apache
          volumeMounts:
            - name: mautic-cron-config
              mountPath: /opt/mautic/cron
            - name: mautic-data
              mountPath: /var/www/html/config
              subPath: config
            - name: mautic-data
              mountPath: /var/www/html/var/logs
              subPath: logs
            - name: mautic-data
              mountPath: /var/www/html/docroot/media/files
              subPath: media-files
            - name: mautic-data
              mountPath: /var/www/html/docroot/media/images
              subPath: media-images
            - name: mautic-data
              mountPath: /var/www/html/docroot/translations
              subPath: translations
      volumes:
        - name: mautic-cron-config
          configMap:
            name: mautic-cron-config
            items:
              - key: mautic_cron
                path: mautic
        - name: mautic-data
          persistentVolumeClaim:
            claimName: mautic-pvc
