apps/mautic/mautic-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mautic-worker
spec:
  selector:
    matchLabels:
      app: mautic-worker
  replicas: 1
  template:
    metadata:
      labels:
        app: mautic-worker
    spec:
      containers:
        - name: mautic-worker
          image: mautic/mautic:7.2.1-apache
          volumeMounts:
            - name: mautic-data
              mountPath: /var/www/html/config
              subPath: config
            - name: mautic-data
              mountPath: /var/www/html/var/logs
              subPath: logs
            - name: mautic-data
              mountPath: /var/www/html/docroot/media/files
              subPath: media-files
            - name: mautic-data
              mountPath: /var/www/html/docroot/media/images
              subPath: media-images
            - name: mautic-data
              mountPath: /var/www/html/docroot/translations
              subPath: translations
      volumes:
        - name: mautic-data
          persistentVolumeClaim:
            claimName: mautic-pvc
