apps/mautic/mautic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mautic
spec:
  selector:
    app: mautic
  type: ClusterIP
  ports:
    - name: http
      port: 80
