apps/mautic/mautic-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mautic
spec:
  routes:
    - match: Host(`mautic.ieeetamu.org`)
      kind: Rule
      services:
        - name: mautic
          port: 80
